third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/init/missing_pin_data.stderr
error[E0599]: no associated function or constant named `__pin_data` found for struct `Foo` in the current scope
 --> tests/ui/compile-fail/init/missing_pin_data.rs:9:9
  |
3 | struct Foo {
  | ---------- associated function or constant `__pin_data` not found for this struct
...
9 |         pin_init!(Self { a: 42 })
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^ associated function or constant not found in `Foo`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `__pin_data`, perhaps you need to implement it:
          candidate #1: `pin_init::__internal::HasPinData`
  = note: this error originates in the macro `pin_init` (in Nightly builds, run with -Z macro-backtrace for more info)
